posiGen_FullsendBox/src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>TaxParcel__c</fullName>
        <label>Tax Parcel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Assessment_Name_and_Address_Complete__c</fullName>
        <formula>AND (NOT( ISBLANK ( AssessorOwnerName1__c )), NOT( ISBLANK (  AssessorMailingAddress__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This checks to see if the Assessor Owner Name 1 and Assessor Mailing Adddress Is Populated.</inlineHelpText>
        <label>Tax Assessment Name and Address Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Town</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria fo Towns.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Town</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Town)</relationshipLabel>
        <relationshipName>Properties_of_Town</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipLast4__c</fullName>
        <label>Zip Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_for_Service_Areas__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is important for bucketing into PG Service Areas</inlineHelpText>
        <label>Zip for Service Areas</label>
        <referenceTo>Zip_Code__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>